# mdapi-hs

./: mdapi-hs.cabal  mdapi.cabal
scripts/: deploy-haddock-manually.sh
src/Fedora/: Mdapi.hs
src/Fedora/Mdapi/: Internal.hs  Servant.hs  Types.hs
