name:                mdapi
version:             2
synopsis:            Haskell interface to Fedora's mdapi
description:         Provides access to the
                     <http://apps.fedoraproject.org/mdapi/ Fedora mdapi> API.
homepage:            https://github.com/relrod/mdapi-hs
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          relrod@redhat.com
copyright:           (c) 2016 Red Hat, Inc.
category:            Fedora
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Fedora.Mdapi.Types
                     , Fedora.Mdapi.Servant
  build-depends:       aeson >= 0.7 && < 1
                     , base >= 4 && < 5
                     , bytestring >= 0.9 && < 1
                     , http-client >= 0.4 && < 1
                     , http-client-tls >= 0.3 && < 0.4
                     , lens >= 4 && < 5
                     , lens-aeson >= 1 && < 2
                     , servant >= 0.7 && < 1
                     , servant-client >= 0.7 && < 1
                     , text >= 1 && < 2
                     , transformers >= 0.3 && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
